Optimize 'Abo Details' to fit in modal box

--- a/fitness.html
+++ b/fitness.html
@@ -91,15 +91,15 @@
                 <table>
                     <tr>
                         <td>24 Monate:&nbsp;</td>
-                        <td align="right">Fr. 1380.-</td>
+                        <td align="right">Fr. 1380.–</td>
                     </tr>
                     <tr>
                         <td>12 Monate:&nbsp;</td>
-                        <td align="right">Fr. 750.-</td>
+                        <td align="right">Fr. 750.–</td>
                     </tr>
                     <tr>
                         <td>6 Monate:&nbsp;</td>
-                        <td align="right">Fr. 510.-</td>
+                        <td align="right">Fr. 510.–</td>
                     </tr>
                 </table>
                 <br/>
@@ -120,27 +120,18 @@
                                     selbständig trainieren.
                                 </p>
                                 <p>
-                                    Wir werden Ihnen alle Geräte vorstellen, und zusammen ein Trainingsprogramm
+                                    Wir werden Ihnen alle Geräte vorstellen und zusammen ein Trainingsprogramm
                                     ausarbeiten. Nebst diesem Einführungstraining sind zwei Coachings im Abo-Preis
                                     einbegriffen.
                                 </p>
                                 <p>
                                     Auf die Preise gewähren wir folgende Rabatte:
                                 </p>
-                                <table>
-                                    <tr>
-                                        <td>
-                                            Personen im gleichen Haushalt lebend:&nbsp;<br/>
-                                            Studierende/Lehrlinge bis 25 Jahre:&nbsp;<br/>
-                                            Nahtlose Erneuerung:&nbsp;
-                                        </td>
-                                        <td>
-                                            10%<br/>
-                                            10%<br/>
-                                            Fr. 20.- Reduktion
-                                        </td>
-                                    </tr>
-                                </table>
+                                <ul>
+                                    <li>Personen im gleichen Haushalt: 10%<br/></li>
+                                    <li>Studierende/Lehrlinge bis 25 Jahre: 10%<br/></li>
+                                    <li>Nahtlose Erneuerung: Fr. 20.– Reduktion</li>
+                                </ul>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Schliessen</button>
