Add 'Betreute Zeiten Fitnessraum' modal

--- a/fitness.html
+++ b/fitness.html
@@ -147,7 +147,36 @@
                     <i class="icon fa-icon fa fa-hourglass-3"></i>
                 </div>
                 <h1>Betreute Zeiten</h1>
-                <p>Selbstständiges Training ist zu den Geschäfts-Öffnungszeiten jederzeit möglich.</p>
+                <p>Selbstständiges Training zu den Geschäfts-Öffnungszeiten.</p>
+                <br/>
+                <a class="more" href="#" role="button" data-toggle="modal" data-target="#timeDetails">
+                    Mehr&hellip;
+                </a>
+                <div class="modal fade" tabindex="-1" role="dialog" id="timeDetails">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                        aria-hidden="true">&times;</span></button>
+                                <h2 class="modal-title">Betreute Zeiten Fitnessraum</h2>
+                            </div>
+                            <div class="modal-body">
+                                <p>
+                                    Für Einführungen, Überprüfungen des Trainingsplanes und bei allgemeinen Fragen
+                                    betreuen wir Sie zu folgenden Zeiten spezifisch im Fitnessraum:
+                                </p>
+                                <table>
+                                    <tr><td valign="top"><b>Mo&nbsp;</b></td><td>9 - 10:30,&nbsp;</td><td>14 - 20:00</td></tr>
+                                    <tr><td valign="top"><b>Di&nbsp;</b></td><td>9 - 10:30,&nbsp;</td><td>14 - 21:00</td></tr>
+                                    <tr><td valign="top"><b>Mi&nbsp;</b></td><td align="center">&mdash;</td><td>14 - 21:00</td></tr>
+                                </table>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Schliessen</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="footer col-xs-12">
