Add 'Team' page (work in progress)

--- a/physio.html
+++ b/physio.html
@@ -40,7 +40,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="#">Physio</a></li>
                 <li><a href="fitness.html">Fitness</a></li>
-                <li><a href="#">Team</a></li>
+                <li><a href="team.html">Team</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </div>
