--- a/fitness.html
+++ b/fitness.html
@@ -40,7 +40,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="physio.html">Physio</a></li>
                 <li class="active"><a href="#">Fitness</a></li>
-                <li><a href="#">Team</a></li>
+                <li><a href="team.html">Team</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </div>
