--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="">Home</a></li>
+                <li class="active"><a href="#">Home</a></li>
                 <li><a href="physio.html">Physio</a></li>
                 <li><a href="fitness.html">Fitness</a></li>
-                <li><a href="#">Team</a></li>
+                <li><a href="team.html">Team</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </div>
