--- a/kontakt.html
+++ b/kontakt.html
@@ -39,7 +39,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="physio.html">Physio</a></li>
                 <li><a href="fitness.html">Fitness</a></li>
-                <li><a href="#">Team</a></li>
+                <li><a href="team.html">Team</a></li>
                 <li class="active"><a href="#">Kontakt</a></li>
             </ul>
         </div>
