Gender-neutral Physios

--- a/physio.html
+++ b/physio.html
@@ -64,7 +64,7 @@
                 individuelle Ziele fest und stimmen unseren Behandlungsplan darauf ab.
             </p>
             <p>
-                Gesundheit ist mehr als das Freisein von Krankheiten und Gebrechen. Als Physiotherapeutinnen helfen wir
+                Gesundheit ist mehr als das Freisein von Krankheiten und Gebrechen. Als PhysiotherapeutInnen helfen wir
                 Ihnen, Ihr körperliches, geistiges und soziales Wohlbefinden zu erlangen und zu erhalten.
             </p>
             <p>
@@ -78,7 +78,7 @@
                 <li>Leistungsdiagnostik auf Anfrage</li>
                 <li>Konservative und postoperative Rehabilitation</li>
                 <li>Manuelle Triggerpunkttherapie</li>
-                <li> Kinesiotaping</li>
+                <li>Kinesiotaping</li>
                 <li>Medizinische Massage</li>
                 <li>Physikalische Anwendungen (Elektrotherapie, Ultraschall, Wärmeanwendungen)</li>
             </ul>
