Towards a new 'team' page

--- a/barbara.html
+++ b/barbara.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon image_src" href="apple-touch-icon.png">
 
-    <title>Physio Movimento | Team</title>
+    <title>Physio Movimento | Team | Barbara Longo</title>
 
     <link href="css/bootstrap-custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -104,19 +104,92 @@
             </svg>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="well">
-                <div class="col-xs-12">
-                    <h1>Barbara Longo</h1>
-                    <p>Dipl. Physiotherapeutin FH</p>
-
-                </div>
-                <a class="more col-xs-12" href="barbara.html" role="button">
-                    Mehr&hellip;
-                </a>
-            </div>
+    <div class="row section">
+        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/april.jpg"/>
+        <div class="col-lg-10 col-sm-6 col-xs-12">
+            <!-- reactive vertical space -->
+            <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
+            <h2>Barbara&nbsp;Longo</h2>
+            <p>Dipl. Physiotherapeutin FH</p>
         </div>
+    </div>
+    <div class="row section">
+        <div class="col-xs-12">
+            <h2>Berufserfahrung</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">9 Jahre</div>
+        <div class="col-xs-9">
+            Kantonsspital Bruderholz mit Schwerpunkt Rückenrehabilitation, Orthopädie, Traumatologie,
+            Rheumatologie.<br/>
+            Fachbereichsverantwortung Rückenrehabilitation, Stv. Leitung gesamte Rehabilitation.
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">3 Jahre</div>
+        <div class="col-xs-9">
+            Berufsausübung in Privatpraxen mit Schwerpunkt Orthopädie, Traumatologie, Rheumatologie
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">6 Jahre</div>
+        <div class="col-xs-9">Selbständige Tätigkeit in Niederdorf</div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">seit 2016</div>
+        <div class="col-xs-9">Mitinhaberin Movimento Physio-und Trainingstherapie GmbH, Oberdorf</div>
+    </div>
+    <div class="row section">
+        <div class="col-xs-12">
+            <h2>Aus-und Weiterbildungen</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">Diplom Physiotherapie Kantonsspital Basel 1998</div>
+        <div class="col-xs-12">Zusatzausbildung in Manueller Therapie Maitland Konzept, Level 2b</div>
+        <div class="col-xs-12">Zusatzausbildung im Umgang mit chronifizierenden Rückenschmerzen</div>
+        <div class="col-xs-12">ESP-Themenkurs Training bei Diabetes, Übergewicht, Stoffwechselerkrankungen</div>
+        <div class="col-xs-12">ESP-Themenkurs Training bei kardio-pulmonalen Erkrankungen</div>
+        <div class="col-xs-12">TRX Sports Medicine Suspension Trainer L2</div>
+    </div>
+    <div class="row section">
+        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/arizona.jpg"/>
+        <div class="col-lg-10 col-sm-6 col-xs-12">
+            <!-- reactive vertical space -->
+            <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
+            <h2>Melina&nbsp;Dürr</h2>
+            <p>Dipl. Physiotherapeutin FH</p>
+        </div>
+    </div>
+    <div class="row section">
+        <div class="col-xs-12">
+            <h2>Berufserfahrung</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">5 Jahre</div>
+        <div class="col-xs-9">
+            Kantonsspital Bruderholz mit Schwerpunkt Rückenrehabilitation, Orthopädie, Traumatologie,
+            Rheumatologie.<br/>
+            Fachbereichsverantwortung Rückenrehabilitation, Stv. Leitung gesamte Rehabilitation.
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">4 Jahre</div>
+        <div class="col-xs-9">
+            Berufsausübung in Privatpraxen mit Schwerpunkt Orthopädie, Traumatologie, Rheumatologie
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">3 Jahre</div>
+        <div class="col-xs-9">
+            Selbständige Tätigkeit in Niederdorf
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">seit 2016</div>
+        <div class="col-xs-9">Mitinhaberin Movimento Physio-und Trainingstherapie GmbH, Oberdorf</div>
     </div>
     <div class="row">
         <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
