Rough layout of portrait boxes

--- a/barbara.html
+++ b/barbara.html
@@ -39,12 +39,12 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="physio.html">Physio</a></li>
                 <li><a href="fitness.html">Fitness</a></li>
-                <li class="active"><a href="#">Team</a></li>
+                <li class="active"><a href="team.html">Team</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </div>
     </nav>
-    <div class="row">
+    <div class="row team">
         <div class="col-xs-12">
             <!-- offset and enlarge 'viewBox' to account for 30pt animation -->
             <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -153,46 +153,10 @@
         <div class="col-xs-12">ESP-Themenkurs Training bei kardio-pulmonalen Erkrankungen</div>
         <div class="col-xs-12">TRX Sports Medicine Suspension Trainer L2</div>
     </div>
-    <div class="row section">
-        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/arizona.jpg"/>
-        <div class="col-lg-10 col-sm-6 col-xs-12">
-            <!-- reactive vertical space -->
-            <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
-            <h2>Melina&nbsp;Dürr</h2>
-            <p>Dipl. Physiotherapeutin FH</p>
-        </div>
-    </div>
-    <div class="row section">
+    <div class="row">
         <div class="col-xs-12">
-            <h2>Berufserfahrung</h2>
+            <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">5 Jahre</div>
-        <div class="col-xs-9">
-            Kantonsspital Bruderholz mit Schwerpunkt Rückenrehabilitation, Orthopädie, Traumatologie,
-            Rheumatologie.<br/>
-            Fachbereichsverantwortung Rückenrehabilitation, Stv. Leitung gesamte Rehabilitation.
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">4 Jahre</div>
-        <div class="col-xs-9">
-            Berufsausübung in Privatpraxen mit Schwerpunkt Orthopädie, Traumatologie, Rheumatologie
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">3 Jahre</div>
-        <div class="col-xs-9">
-            Selbständige Tätigkeit in Niederdorf
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">seit 2016</div>
-        <div class="col-xs-9">Mitinhaberin Movimento Physio-und Trainingstherapie GmbH, Oberdorf</div>
-    </div>
-    <div class="row">
-        <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
     </div>
 </div>
 <div class="tile"></div>
