--- a/melina.html
+++ b/melina.html
@@ -39,12 +39,12 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="physio.html">Physio</a></li>
                 <li><a href="fitness.html">Fitness</a></li>
-                <li class="active"><a href="#">Team</a></li>
+                <li class="active"><a href="team.html">Team</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </div>
     </nav>
-    <div class="row">
+    <div class="row team">
         <div class="col-xs-12">
             <!-- offset and enlarge 'viewBox' to account for 30pt animation -->
             <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -143,7 +143,9 @@
         <div class="col-xs-9">Mitinhaberin Movimento Physio-und Trainingstherapie GmbH, Oberdorf</div>
     </div>
     <div class="row">
-        <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
+        <div class="col-xs-12">
+            <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
+        </div>
     </div>
 </div>
 <div class="tile"></div>
