--- a/team.html
+++ b/team.html
@@ -44,7 +44,7 @@
             </ul>
         </div>
     </nav>
-    <div class="row">
+    <div class="row team">
         <div class="col-xs-12">
             <!-- offset and enlarge 'viewBox' to account for 30pt animation -->
             <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -105,21 +105,37 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-6">
-            <div class="well">
-                <div class="col-xs-12">
-                    <h1>Barbara Longo</h1>
-                    <p>Dipl. Physiotherapeutin FH</p>
-
+        <div class="col-sm-6 col-xs-12">
+            <div class="portrait-well">
+                <div class="col-md-5 col-xs-12">
+                    <p>
+                    <h1>Barbara&nbsp;Longo</h1>
+                    <p>Dipl.&nbsp;Physiotherapeutin&nbsp;FH</p>
+                    <a href="barbara.html" role="button">
+                        Mehr&hellip;
+                    </a>
                 </div>
-                <a class="more col-xs-12" href="barbara.html" role="button">
-                    Mehr&hellip;
-                </a>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/april.jpg">
+            </div>
+        </div>
+        <div class="col-sm-6 col-xs-12">
+            <div class="portrait-well">
+                <div class="col-md-5 col-xs-12">
+                    <p>
+                    <h1>Melina&nbsp;Dürr</h1>
+                    <p>Dipl.&nbsp;Physiotherapeutin&nbsp;FH</p>
+                    <a href="melina.html" role="button">
+                        Mehr&hellip;
+                    </a>
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/arizona.jpg">
             </div>
         </div>
     </div>
     <div class="row">
-        <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
+        <div class="col-xs-12">
+            <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
+        </div>
     </div>
 </div>
 <div class="tile"></div>
