Add 'Reto Maurer'

--- a/melina-duerr.html
+++ b/melina-duerr.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon image_src" href="apple-touch-icon.png">
 
-    <title>Physio Movimento | Team</title>
+    <title>Physio Movimento | Team | Melina Dürr</title>
 
     <link href="css/bootstrap-custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -39,7 +39,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="physio.html">Physio</a></li>
                 <li><a href="fitness.html">Fitness</a></li>
-                <li class="active"><a href="#">Team</a></li>
+                <li class="active"><a href="team.html">Team</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </div>
@@ -104,48 +104,56 @@
             </svg>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Barbara&nbsp;Longo</h1>
-                    <p>Dipl.&nbsp;Physiotherapeutin&nbsp;FH</p>
-                    <a href="barbara-longo.html" role="button">
-                        Mehr&hellip;
-                    </a>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/april.jpg">
-            </div>
+    <div class="row section">
+        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/arizona.jpg"/>
+        <div class="col-lg-10 col-sm-6 col-xs-12">
+            <!-- reactive vertical space -->
+            <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
+            <h2>Melina&nbsp;Dürr</h2>
+            <p>Dipl. Physiotherapeutin FH</p>
         </div>
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Melina&nbsp;Dürr</h1>
-                    <p>Dipl.&nbsp;Physiotherapeutin&nbsp;FH</p>
-                    <a href="melina-duerr.html" role="button">
-                        Mehr&hellip;
-                    </a>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/arizona.jpg">
-            </div>
+    </div>
+    <div class="row section">
+        <div class="col-xs-12">
+            <h2>Berufserfahrung</h2>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Reto&nbsp;Maurer</h1>
-                    <p>Sportwissenschaftler</p>
-                    <a href="reto-maurer.html" role="button">
-                        Mehr&hellip;
-                    </a>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/alex.jpg">
-            </div>
+        <div class="col-lg-2 col-xs-3">5 Jahre</div>
+        <div class="col-xs-9">
+            Kantonsspital Bruderholz mit Schwerpunkt Rückenrehabilitation, Orthopädie, Traumatologie,
+            Rheumatologie.<br/>
+            Fachbereichsverantwortung Rückenrehabilitation, Stv. Leitung gesamte Rehabilitation.
         </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">4 Jahre</div>
+        <div class="col-xs-9">
+            Berufsausübung in Privatpraxen mit Schwerpunkt Orthopädie, Traumatologie, Rheumatologie
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">3 Jahre</div>
+        <div class="col-xs-9">
+            Selbständige Tätigkeit in Niederdorf
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">seit 2016</div>
+        <div class="col-xs-9">Mitinhaberin Movimento Physio-und Trainingstherapie GmbH, Oberdorf</div>
+    </div>
+    <div class="row section">
+        <div class="col-xs-12">
+            <h2>Aus-und Weiterbildungen</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">Diplom Physiotherapie Bethesda-Spital, Basel 2003</div>
+        <div class="col-xs-12">Zusatzausbildung in Manueller Therapie Maitland Konzept, Level 3</div>
+        <div class="col-xs-12">Zusatzausbildung ESP Sportphysiotherapie</div>
+        <div class="col-xs-12">ESP-Themenkurs Training bei Diabetes, Übergewicht, Stoffwechselerkrankungen</div>
+        <div class="col-xs-12">ESP-Themenkurs Training bei kardio-pulmonalen Erkrankungen</div>
+        <div class="col-xs-12">TRX Sports Medicine Suspension Trainer L2</div>
     </div>
     <div class="row">
         <div class="col-xs-12">
