--- a/reto-maurer.html
+++ b/reto-maurer.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon image_src" href="apple-touch-icon.png">
 
-    <title>Physio Movimento | Team | Melina Dürr</title>
+    <title>Physio Movimento | Team | Reto Maurer</title>
 
     <link href="css/bootstrap-custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -105,12 +105,12 @@
         </div>
     </div>
     <div class="row section">
-        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/arizona.jpg"/>
+        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/alex.jpg"/>
         <div class="col-lg-10 col-sm-6 col-xs-12">
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
-            <h2>Melina&nbsp;Dürr</h2>
-            <p>Dipl. Physiotherapeutin FH</p>
+            <h2>Reto&nbsp;Maurer</h2>
+            <p>Sportwissenschaftler</p>
         </div>
     </div>
     <div class="row section">
@@ -119,28 +119,55 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">5 Jahre</div>
+        <div class="col-lg-2 col-xs-3">? Jahre</div>
         <div class="col-xs-9">
-            Kantonsspital Bruderholz mit Schwerpunkt Rückenrehabilitation, Orthopädie, Traumatologie,
-            Rheumatologie.<br/>
-            Fachbereichsverantwortung Rückenrehabilitation, Stv. Leitung gesamte Rehabilitation.
+            Leiter bei verschiedensten Sportvereinen und Institutionen
         </div>
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">4 Jahre</div>
         <div class="col-xs-9">
-            Berufsausübung in Privatpraxen mit Schwerpunkt Orthopädie, Traumatologie, Rheumatologie
+            Fitnessinstruktor/Sportlehrer, Sana Center SA, Biel/Hirslanden Training, Aarau
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">3 Jahre</div>
+        <div class="col-lg-2 col-xs-3">1 Jahr</div>
         <div class="col-xs-9">
-            Selbständige Tätigkeit in Niederdorf
+            Mitarbeiter Health&Wellness Management, Credit Suisse AG, Zürich
         </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">seit 2013</div>
+        <div class="col-xs-9">Prüfungsexperte Ausbildung FitnessinstruktorIn, Klubschule Migros, Basel</div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">seit 2015</div>
+        <div class="col-xs-9">Dozent Ausbildung FitnessinstruktorIn, Klubschule Migros, Basel</div>
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">seit 2016</div>
-        <div class="col-xs-9">Mitinhaberin Movimento Physio-und Trainingstherapie GmbH, Oberdorf</div>
+        <div class="col-xs-9">Sportwissenschaftler Movimento Physio-und Trainingstherapie GmbH, Oberdorf</div>
+    </div>
+    <div class="row section">
+        <div class="col-xs-12">
+            <h2>Aus-und Weiterbildungen</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">Diverse J+S-Kurse</div>
+        <div class="col-xs-12">Bachelor of Science EHSM in Sports (BSc), Eidg. Hochschule für Sport, Magglingen 2012.
+            <br/>
+            Spezialisierung: Gesundheit/Fitness; Gesundheit/Adapted Physical Activities
+        </div>
+        <div class="col-xs-12">Laktatseminare bei Ueli Schweizer</div>
+        <div class="col-xs-12">TRX Sportsmedicine Suspension Trainer L2</div>
+        <div class="col-xs-12">Functional Training Instructor; Functional Mobility Instructor; Trainer für funktionelle
+            Sportrehabilitation
+        </div>
+        <div class="col-xs-12">Erwachsenenbildner SVEB-Zertifikat 2015</div>
+        <div class="col-xs-12">Master of Science (MSc) in Sport Sciences, Option Gesundheit/Forschung, Universität
+            Fribourg, Fribourg/Magglingen 2016
+        </div>
     </div>
     <div class="row">
         <div class="col-xs-12">
