Fixed tile header/footer (prevent from shining through background on xs devices)

--- a/barbara-longo.html
+++ b/barbara-longo.html
@@ -23,7 +23,7 @@
     <![endif]-->
 </head>
 <body>
-
+<div class="tile"></div>
 <div class="container-fluid">
     <nav class="row navbar navbar-default">
         <div class="navbar-header">
