--- a/fitness.html
+++ b/fitness.html
@@ -24,7 +24,7 @@
     <script src="https://use.fontawesome.com/6935404a48.js"></script>
 </head>
 <body>
-
+<div class="tile"></div>
 <div class="container-fluid">
     <nav class="row navbar navbar-default">
         <div class="navbar-header">
