Add link to http://www.miracolour.de

--- a/kontakt.html
+++ b/kontakt.html
@@ -87,6 +87,8 @@
                 </div>
                 <div class="col-sm-1 col-xs-12 no-gutter fat">Fotos</div>
                 <div class="col-sm-11 col-xs-12 no-gutter">???</div>
+                <div class="col-sm-1 col-xs-12 no-gutter fat">Kacheln</div>
+                <div class="col-sm-11 col-xs-12 no-gutter"><a href="http://www.miracolour.de">MiraColour</a></div>
                 <div class="col-sm-1 col-xs-12 no-gutter fat">Icons</div>
                 <div class="col-sm-11 col-xs-12 no-gutter"><a href="http://fontawesome.io">fontawesome.io</a>,
                     <a href="http://freepik.com">freepik.com</a>,
