Replace Öffnungszeiten with Geschäftsöffnungszeiten

--- a/fitness.html
+++ b/fitness.html
@@ -116,7 +116,7 @@
                             </div>
                             <div class="modal-body">
                                 <p>
-                                    Mit einem Abo dürfen Sie während den Geschäfts-Öffnungszeiten uneingeschränkt
+                                    Mit einem Abo dürfen Sie während den Geschäftsöffnungszeiten uneingeschränkt
                                     selbständig trainieren.
                                 </p>
                                 <p>
@@ -147,7 +147,7 @@
                     <i class="icon fa-icon fa fa-hourglass-3"></i>
                 </div>
                 <h1>Betreute Zeiten</h1>
-                <p>Selbstständiges Training zu den Geschäfts-Öffnungszeiten.</p>
+                <p>Selbstständiges Training zu den Geschäftsöffnungszeiten.</p>
                 <br/>
                 <a class="more" href="#" role="button" data-toggle="modal" data-target="#timeDetails">
                     Mehr&hellip;
@@ -188,7 +188,7 @@
                 061 963 00 23<br/>
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
-            <h2>Öffnungszeiten</h2>
+            <h2>Geschäftsöffnungszeiten</h2>
             <table>
                 <tr>
                     <td>
