--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 061 963 00 23<br/>
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
-            <h2>Öffnungszeiten</h2>
+            <h2>Geschäftsöffnungszeiten</h2>
             <table>
                 <tr>
                     <td>
