--- a/kontakt.html
+++ b/kontakt.html
@@ -97,7 +97,7 @@
                         target="_blank">Lizenz</a>)
                 </div>
             </div>
-            <h2>Öffnungszeiten</h2>
+            <h2>Geschäftsöffnungszeiten</h2>
             <table>
                 <tr>
                     <td>
