--- a/kontakt.html
+++ b/kontakt.html
@@ -62,33 +62,33 @@
                 061 963 00 23<br/>
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
-            <h2>Barbara Longo</h2>
-            <p>
-                <a href="mailto:barbara.longo@physiomovimento.ch">barbara.longo@physiomovimento.ch</a>
-            </p>
-            <h2>Melina Dürr</h2>
-            <p>
-                <a href="mailto:melina.duerr@physiomovimento.ch">melina.duerr@physiomovimento.ch</a>
-            </p>
-            <h2>Reto Maurer</h2>
-            <p>
-                <a href="mailto:reto.maurer@physiomovimento.ch">reto.maurer@physiomovimento.ch</a>
-            </p>
+            <h2>Anfahrt</h2>
+            <div class="col-xs-12 no-gutter">
+                <div class="col-sm-1 col-xs-12 no-gutter fat">Mit ÖV</div>
+                <div class="col-sm-11 col-xs-12 no-gutter">Station Oberdorf (3&nbsp;min&nbsp;/&nbsp;250&nbsp;m Fussweg)</div>
+                <div class="hidden-sm">&nbsp;</div>
+                <div class="col-sm-1 col-xs-12 no-gutter fat">Mit Auto</div>
+                <div class="col-sm-11 col-xs-12 no-gutter">Navi &laquo;Hauptstraße 45&raquo;, Parkhaus Coop benutzen</div>
+            </div>
         </div>
         <div class="footer col-xs-12">
             <h2>Impressum</h2>
             <div class="col-xs-12 impressum no-gutter">
                 <div class="col-sm-1 col-xs-12 no-gutter fat">Text</div>
                 <div class="col-sm-11 col-xs-12 no-gutter">Movimento Physio-und Trainingstherapie GmbH</div>
+                <div class="hidden-sm">&nbsp;</div>
                 <div class="col-sm-1 col-xs-12 no-gutter fat">Logo</div>
                 <div class="col-sm-11 col-xs-12 no-gutter">Nadja Ebner</div>
+                <div class="hidden-sm">&nbsp;</div>
                 <div class="col-sm-1 col-xs-12 no-gutter fat">Website</div>
-                <div class="col-sm-11 col-xs-12 no-gutter">Scalable Rahel Lüthy, <a href="http://scalable.ch">scalable.ch</a>
-                </div>
+                <div class="col-sm-11 col-xs-12 no-gutter"><a href="http://scalable.ch">Scalable Rahel Lüthy</a></div>
+                <div class="hidden-sm">&nbsp;</div>
                 <div class="col-sm-1 col-xs-12 no-gutter fat">Fotos</div>
                 <div class="col-sm-11 col-xs-12 no-gutter">???</div>
+                <div class="hidden-sm">&nbsp;</div>
                 <div class="col-sm-1 col-xs-12 no-gutter fat">Kacheln</div>
                 <div class="col-sm-11 col-xs-12 no-gutter"><a href="http://www.miracolour.de">MiraColour</a></div>
+                <div class="hidden-sm">&nbsp;</div>
                 <div class="col-sm-1 col-xs-12 no-gutter fat">Icons</div>
                 <div class="col-sm-11 col-xs-12 no-gutter"><a href="http://fontawesome.io">fontawesome.io</a>,
                     <a href="http://freepik.com">freepik.com</a>,
