Add email addresses and generic footer

--- a/reto-maurer.html
+++ b/reto-maurer.html
@@ -110,7 +110,10 @@
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Reto&nbsp;Maurer</h2>
-            <p>Sportwissenschaftler</p>
+            <p>
+                Sportwissenschaftler<br/>
+                <a href="mailto:reto.maurer@physiomovimento.ch">reto.maurer@physiomovimento.ch</a>
+            </p>
         </div>
     </div>
     <div class="row section">
@@ -172,6 +175,31 @@
     <div class="row">
         <div class="col-xs-12">
             <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
+        </div>
+        <div class="footer col-xs-12">
+            <h2>Kontakt</h2>
+            <p>
+                Movimento Physio-und Trainingstherapie GmbH<br/>
+                Ueli Schadweg 3<br/>
+                4436 Oberdorf/BL<br/>
+                061 963 00 23<br/>
+                <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
+            </p>
+            <h2>Geschäftsöffnungszeiten</h2>
+            <table>
+                <tr>
+                    <td>
+                        Mo und Do:&nbsp;<br/>
+                        Di, Mi, Fr:&nbsp;<br/>
+                        Sa:&nbsp;
+                    </td>
+                    <td>
+                        7 – 20 Uhr<br/>
+                        8 – 21 Uhr<br/>
+                        9 – 13 Uhr
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
