--- a/melina-duerr.html
+++ b/melina-duerr.html
@@ -110,7 +110,10 @@
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Melina&nbsp;Dürr</h2>
-            <p>Dipl. Physiotherapeutin FH</p>
+            <p>
+                Dipl. Physiotherapeutin FH<br/>
+                <a href="mailto:melina.duerr@physiomovimento.ch">melina.duerr@physiomovimento.ch</a>
+            </p>
         </div>
     </div>
     <div class="row section">
@@ -159,7 +162,33 @@
         <div class="col-xs-12">
             <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
         </div>
+        <div class="footer col-xs-12">
+            <h2>Kontakt</h2>
+            <p>
+                Movimento Physio-und Trainingstherapie GmbH<br/>
+                Ueli Schadweg 3<br/>
+                4436 Oberdorf/BL<br/>
+                061 963 00 23<br/>
+                <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
+            </p>
+            <h2>Geschäftsöffnungszeiten</h2>
+            <table>
+                <tr>
+                    <td>
+                        Mo und Do:&nbsp;<br/>
+                        Di, Mi, Fr:&nbsp;<br/>
+                        Sa:&nbsp;
+                    </td>
+                    <td>
+                        7 – 20 Uhr<br/>
+                        8 – 21 Uhr<br/>
+                        9 – 13 Uhr
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
+
 </div>
 <div class="tile"></div>
 </body>
