--- a/team.html
+++ b/team.html
@@ -110,7 +110,10 @@
                 <div class="col-md-5 col-xs-12">
                     <p>
                     <h1>Barbara&nbsp;Longo</h1>
-                    <p>Dipl.&nbsp;Physiotherapeutin&nbsp;FH</p>
+                    <p>
+                        Dipl.&nbsp;Physiotherapeutin&nbsp;FH<br/>
+                        <a href="mailto:barbara.longo@physiomovimento.ch">barbara.longo@physiomovimento.ch</a>
+                    </p>
                     <a href="barbara-longo.html" role="button">
                         Mehr&hellip;
                     </a>
@@ -123,7 +126,10 @@
                 <div class="col-md-5 col-xs-12">
                     <p>
                     <h1>Melina&nbsp;Dürr</h1>
-                    <p>Dipl.&nbsp;Physiotherapeutin&nbsp;FH</p>
+                    <p>
+                        Dipl.&nbsp;Physiotherapeutin&nbsp;FH<br/>
+                        <a href="mailto:melina.duerr@physiomovimento.ch">melina.duerr@physiomovimento.ch</a>
+                    </p>
                     <a href="melina-duerr.html" role="button">
                         Mehr&hellip;
                     </a>
@@ -138,7 +144,10 @@
                 <div class="col-md-5 col-xs-12">
                     <p>
                     <h1>Reto&nbsp;Maurer</h1>
-                    <p>Sportwissenschaftler</p>
+                    <p>
+                        Sportwissenschaftler<br/>
+                        <a href="mailto:reto.maurer@physiomovimento.ch">reto.maurer@physiomovimento.ch</a>
+                    </p>
                     <a href="reto-maurer.html" role="button">
                         Mehr&hellip;
                     </a>
@@ -150,6 +159,31 @@
     <div class="row">
         <div class="col-xs-12">
             <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
+        </div>
+        <div class="footer col-xs-12">
+            <h2>Kontakt</h2>
+            <p>
+                Movimento Physio-und Trainingstherapie GmbH<br/>
+                Ueli Schadweg 3<br/>
+                4436 Oberdorf/BL<br/>
+                061 963 00 23<br/>
+                <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
+            </p>
+            <h2>Geschäftsöffnungszeiten</h2>
+            <table>
+                <tr>
+                    <td>
+                        Mo und Do:&nbsp;<br/>
+                        Di, Mi, Fr:&nbsp;<br/>
+                        Sa:&nbsp;
+                    </td>
+                    <td>
+                        7 – 20 Uhr<br/>
+                        8 – 21 Uhr<br/>
+                        9 – 13 Uhr
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
